npx create-next-app

--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   "dependencies": {
     "next": "9.3.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "sqlite": "4.0.5",
+    "sqlite3": "4.1.1"
+  },
+  "devDependencies": {
+    "@types/node": "13.11.0",
+    "@types/react": "16.9.32",
+    "typescript": "3.8.3"
   }
 }
