--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "node ./test-migration.js && next dev",
+    "build": "node ./test-migration.js && next build",
     "start": "next start"
   },
   "dependencies": {
-    "@material-ui/core": "^4.9.9",
-    "@material-ui/icons": "^4.9.1",
-    "next": "9.3.4",
+    "@material-ui/core": "4.11.0",
+    "@material-ui/icons": "4.9.1",
+    "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "sqlite": "4.0.5",
-    "sqlite3": "4.1.1"
+    "sqlite": "4.0.14",
+    "sqlite3": "5.0.0"
   },
   "devDependencies": {
-    "@types/node": "13.11.0",
-    "@types/react": "16.9.32",
-    "typescript": "3.8.3"
+    "@types/node": "14.0.27",
+    "@types/react": "16.9.46",
+    "typescript": "3.9.7"
   }
 }
